--- a/examples/hello-grpc/proto/BUILD
+++ b/examples/hello-grpc/proto/BUILD
@@ -5,6 +5,6 @@ load("@org_pubref_rules_protobuf//cpp:rules.bzl", "cc_proto_library")
 cc_proto_library(
     name = "proto",
     protos = [
-        "simple.proto"
+        "simple.proto",
     ],
 )
